feat: Initial commit for landing page.

--- a/packages/instant-apps-components/src/index.html
+++ b/packages/instant-apps-components/src/index.html
@@ -49,6 +49,7 @@
       <calcite-link href="./instant-apps-header.html">Header</calcite-link>
       <calcite-link href="./instant-apps-interactive-legend.html">Interactive Legend</calcite-link>
       <calcite-link href="./instant-apps-keyboard-shortcuts.html">Keyboard Shortcuts</calcite-link>
+      <calcite-link href="./instant-apps-landing-page.html">Landing Page</calcite-link>
       <calcite-link href="./instant-apps-measurement.html">Measurement</calcite-link>
       <calcite-link href="./instant-apps-popovers.html">Popover</calcite-link>
       <calcite-link href="./instant-apps-scoreboard.html">Scoreboard</calcite-link>
