feat: Language switcher UI updates

--- a/packages/instant-apps-components/src/instant-apps-language-switcher.html
+++ b/packages/instant-apps-components/src/instant-apps-language-switcher.html
@@ -25,63 +25,136 @@
     <instant-apps-language-switcher id="langSwitcher"></instant-apps-language-switcher>
     <calcite-button id="openLangSwitcher">Open language switcher</calcite-button>
     <script>
-      const langSwitcher = document.getElementById("langSwitcher");
+      const langSwitcher = document.getElementById('langSwitcher');
       const appSettings = {
         introductionContent: {
-          type: "textEditor",
-          label: "Edit introduction panel",
+          type: 'textEditor',
+          label: 'Edit introduction panel',
           value:
-            "Search to learn more about a location and its surrounding area.</br> Use one of the following search methods: <ul><li>Click the search box and type in an address or choose <b>Use current location </b></li><li>Click within the map <div></div></li></ul></br> Results will include information about features of interest.",
-          uiLocation: ["about", "appComprehension"]
+            'Search to learn more about a location and its surrounding area.</br> Use one of the following search methods: <ul><li>Click the search box and type in an address or choose <b>Use current location </b></li><li>Click within the map <div></div></li></ul></br> Results will include information about features of interest.',
+          uiLocation: {
+            section: {
+              id: 'about',
+              label: 'About',
+            },
+            subsection: {
+              id: 'appComprehension',
+              label: 'App details',
+            },
+          },
         },
         introductionTitle: {
-          type: "string",
-          label: "Title for introduction",
-          value: "",
-          uiLocation: ["about", "appComprehension"]
+          type: 'string',
+          label: 'Title for introduction',
+          value: '',
+          uiLocation: {
+            section: {
+              id: 'about',
+              label: 'About',
+            },
+            subsection: {
+              id: 'appComprehension',
+              label: 'App details',
+            },
+          },
         },
         resultsPanelPreText: {
-          type: "textEditor",
-          label: "Text above results",
+          type: 'textEditor',
+          label: 'Text above results',
           value: null,
-          uiLocation: ["nearby", "resultsText"]
+          uiLocation: {
+            section: {
+              id: 'nearby',
+              label: 'Nearby',
+            },
+            subsection: {
+              id: 'resultsText',
+              label: 'Text',
+            },
+          },
         },
         resultsPanelPostText: {
-          type: "textEditor",
-          label: "Text below results",
+          type: 'textEditor',
+          label: 'Text below results',
           value: null,
-          uiLocation: ["nearby", "resultsText"]
+          uiLocation: {
+            section: {
+              id: 'nearby',
+              label: 'Nearby',
+            },
+            subsection: {
+              id: 'resultsText',
+              label: 'Text',
+            },
+          },
         },
         noResultsMessage: {
-          type: "textEditor",
-          label: "Text for no results",
-          value: "",
-          uiLocation: ["nearby", "resultsText"]
+          type: 'textEditor',
+          label: 'Text for no results',
+          value: '',
+          uiLocation: {
+            section: {
+              id: 'nearby',
+              label: 'Nearby',
+            },
+            subsection: {
+              id: 'resultsText',
+              label: 'Text',
+            },
+          },
         },
         splashButtonText: {
-          type: "string",
-          label: "Introduction panel button text",
-          value: "Close",
-          uiLocation: ["about", "appComprehension"]
+          type: 'string',
+          label: 'Introduction panel button text',
+          value: 'Close',
+          uiLocation: {
+            section: {
+              id: 'about',
+              label: 'About',
+            },
+            subsection: {
+              id: 'appComprehension',
+              label: 'App details',
+            },
+          },
         },
         title: {
-          type: "string",
-          label: "App title",
-          value: "",
-          uiLocation: ["about", "appComprehension"]
+          type: 'string',
+          label: 'App title',
+          value: '',
+          uiLocation: {
+            section: {
+              id: 'about',
+              label: 'About',
+            },
+            subsection: {
+              id: 'appComprehension',
+              label: 'App details',
+            },
+          },
         },
         titleLink: {
-          type: "string",
-          label: "URL link to the title",
-          value: "",
-          uiLocation: ["about", "appComprehension"]
-        }
+          type: 'string',
+          label: 'URL link to the title',
+          value: '',
+          uiLocation: {
+            section: {
+              id: 'about',
+              label: 'About',
+            },
+            subsection: {
+              id: 'appComprehension',
+              label: 'App details',
+            },
+          },
+        },
       };
 
       langSwitcher.appSettings = appSettings;
+      langSwitcher.translatedLanguages = ['ar', 'es', 'vi', 'zh-CN'];
 
-      const openButton = document.getElementById("openLangSwitcher");
-      openButton.addEventListener("click", () => (langSwitcher.open = true));
+      const openButton = document.getElementById('openLangSwitcher');
+      openButton.addEventListener('click', () => (langSwitcher.open = true));
     </script>
   </body>
 </html>
